syntax = "proto3";

package ujumbe.sms.messages;

enum SmsStatus {
    ACCEPTED = 0;
    SCHEDULED = 1;
    CANCELED = 2;
    QUEUED = 3;
    SENDING = 4;
    SENT = 5;
    FAILED = 6;
    DELIVERED = 7;
    UNDELIVERED = 8;
    RECEIVING = 9;
    READ = 10;
    PENDING = 11;
    UNKNOWN = 12;
}
